@@ -1,6 +1,9 @@
 <?php
-
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
 translate('comments');
-$errors = array (COMMENTS_MISSING_THREAD  => 'Comment missing thread information.');
-
+$errors = array (COMMENTS_MISSING_THREAD  => _('Comment missing thread information.'));
+translate();
 ?>
