@@ -1,5 +1,7 @@
 Version 0.5.1
 --------------------------------------------------------------------
+19 February 2007
++ Reduced translate functions.
 
 15 February 2007
 + Added translate functions
